vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__expression_precedence-4.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"1-2-3\")"
---
BinaryExpression
  BinaryExpression
    LiteralExpression
      AbstractLiteral '1'
    Minus
    LiteralExpression
      AbstractLiteral '2'
  Minus
  LiteralExpression
    AbstractLiteral '3'
