vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__expression_precedence-5.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"1+2*3\")"
---
BinaryExpression
  LiteralExpression
    AbstractLiteral '1'
  Plus
  BinaryExpression
    LiteralExpression
      AbstractLiteral '2'
    Times
    LiteralExpression
      AbstractLiteral '3'
