vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__expression_precedence-6.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(1+2)*3\")"
---
BinaryExpression
  ParenthesizedExpressionOrAggregate
    LeftPar
    ElementAssociationList
      ElementAssociation
        BinaryExpression
          LiteralExpression
            AbstractLiteral '1'
          Plus
          LiteralExpression
            AbstractLiteral '2'
    RightPar
  Times
  LiteralExpression
    AbstractLiteral '3'
