vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__expression_precedence.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"1 + 1 ns\")"
---
BinaryExpression
  LiteralExpression
    AbstractLiteral '1'
  Plus
  PhysicalLiteralExpression
    PhysicalLiteral
      AbstractLiteral '1'
      Name
        NameDesignatorPrefix
          Identifier 'ns'
