vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__external_name.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"<< signal dut.foo : boolean >>\")"
---
NameExpression
  Name
    ExternalSignalName
      LtLt
      Keyword(Signal)
      RelativePathname
        PartialPathname
          PathnameElement
            Identifier 'dut'
          Dot
          PathnameElement
            Identifier 'foo'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'boolean'
      GtGt
