vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__multiple_others_aggregate.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(others => 1, others => 2)\")"
---
ParenthesizedExpressionOrAggregate
  LeftPar
  ElementAssociation
    ElementChoices
      Choices
        OthersChoice
          Keyword(Others)
      RightArrow
    LiteralExpression
      AbstractLiteral '1'
  Comma
  ElementAssociation
    ElementChoices
      Choices
        OthersChoice
          Keyword(Others)
      RightArrow
    LiteralExpression
      AbstractLiteral '2'
  RightPar
