vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__named_aggregate_many_choices.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(1 | 2 => 3)\")"
---
ParenthesizedExpressionOrAggregate
  LeftPar
  ElementAssociation
    ElementChoices
      Choices
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '1'
        Bar
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '2'
      RightArrow
    LiteralExpression
      AbstractLiteral '3'
  RightPar
